--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 }
 footer {
     width: 100%;
+    height: 59%;
     position: absolute;
     bottom: auto;
     background: #515566;
@@ -37,12 +38,12 @@ footer {
     margin-bottom: 20px;
 }
 .col-1 img {
-    width: 55px;
-    margin-bottom: 15px;
+    width: 100px;
+    margin-bottom: 0px;
 }
 .col-1 p {
     color: #fff;
-    font-size: 15px;
+    font-size: 150px;
     line-height: 20px;
 }
 .col-2 {
